chore(refactor): phase 1 of refactoring done
 - Better splitting
 - Better responsability
 - Better readability
